Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18588

LBUG - LustreError: 949:0:(cl_page.c:178:__cl_page_free()) ASSERTION( cl_page_kmem_size_array[index] == bufsize ) failed:

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

    Description

      Some tests hit the error that page's size does not match the supposed value when it is being freed.

      [    5.490430] block dm-0: the capability attribute has been deprecated.
      [10833.138583] LustreError: 949:0:(cl_page.c:178:__cl_page_free()) ASSERTION( cl_page_kmem_size_array[index] == bufsize ) failed: 
      [10833.138620] LustreError: 949:0:(cl_page.c:178:__cl_page_free()) LBUG
      [10833.138647] CPU: 9 PID: 949 Comm: ptlrpcd_04_01 Kdump: loaded Tainted: G           OE     -------  ---  5.14.0-427.44.1.el9_4.x86_64 #1
      [10833.138674] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS rel-1.16.3-0-ga6ed6b701f0a-prebuilt.qemu.org 04/01/2014
      [10833.138696] Call Trace:
      [10833.138703]  <TASK>
      [10833.138710]  dump_stack_lvl+0x34/0x48
      [10833.138723]  lbug_with_loc.cold+0x5/0x58 [libcfs]
      [10833.138748]  __cl_page_free+0x1c2/0x260 [obdclass]
      [10833.138799]  cl_page_free+0x96/0x4d0 [obdclass]
      [10833.138842]  cl_batch_put+0x1ac/0x3d0 [obdclass]
      [10833.138883]  discard_cl_pages+0x99/0x150 [osc]
      [10833.138907]  osc_lru_shrink+0x34a/0x930 [osc]
      [10833.138928]  lru_queue_work+0xea/0x220 [osc]
      [10833.138949]  work_interpreter+0x32/0x170 [ptlrpc]
      [10833.139004]  ptlrpc_check_set+0x40e/0x1ef0 [ptlrpc]
      [10833.139054]  ? finish_task_switch.isra.0+0x8c/0x2a0
      [10833.139067]  ptlrpcd_check+0x3b4/0x5a0 [ptlrpc]
      [10833.139121]  ? prepare_to_wait_event+0x5d/0x180
      [10833.139132]  ptlrpcd+0x1ba/0x4d0 [ptlrpc]
      [10833.139178]  ? __pfx_autoremove_wake_function+0x10/0x10
      [10833.139190]  ? __pfx_ptlrpcd+0x10/0x10 [ptlrpc]
      [10833.139237]  kthread+0xe0/0x100
      [10833.139247]  ? __pfx_kthread+0x10/0x10
      [10833.139256]  ret_from_fork+0x2c/0x50
      [10833.139267]  </TASK>
      [10839.610671] Kernel panic - not syncing: LBUG
      [10839.610692] CPU: 8 PID: 949 Comm: ptlrpcd_04_01 Kdump: loaded Tainted: G           OE     -------  ---  5.14.0-427.44.1.el9_4.x86_64 #1
      [10839.610720] Hardware name: QEMU Standard PC (i440FX + PIIX, 1996), BIOS rel-1.16.3-0-ga6ed6b701f0a-prebuilt.qemu.org 04/01/2014
      [10839.610743] Call Trace:
      [10839.610752]  <TASK>
      [10839.610760]  dump_stack_lvl+0x34/0x48
      [10839.610775]  panic+0x107/0x2f7
      [10839.610785]  lbug_with_loc.cold+0x2f/0x58 [libcfs]
      [10839.610810]  __cl_page_free+0x1c2/0x260 [obdclass]
      [10839.610861]  cl_page_free+0x96/0x4d0 [obdclass]
      [10839.610904]  cl_batch_put+0x1ac/0x3d0 [obdclass]
      [10839.610946]  discard_cl_pages+0x99/0x150 [osc]
      [10839.610970]  osc_lru_shrink+0x34a/0x930 [osc]
      [10839.610993]  lru_queue_work+0xea/0x220 [osc]
      [10839.611014]  work_interpreter+0x32/0x170 [ptlrpc]
      [10839.611070]  ptlrpc_check_set+0x40e/0x1ef0 [ptlrpc]
      [10839.611121]  ? finish_task_switch.isra.0+0x8c/0x2a0
      [10839.611135]  ptlrpcd_check+0x3b4/0x5a0 [ptlrpc]
      [10839.611628]  ? prepare_to_wait_event+0x5d/0x180
      [10839.612040]  ptlrpcd+0x1ba/0x4d0 [ptlrpc]
      [10839.612485]  ? __pfx_autoremove_wake_function+0x10/0x10
      [10839.612901]  ? __pfx_ptlrpcd+0x10/0x10 [ptlrpc]
      [10839.613336]  kthread+0xe0/0x100
      [10839.613733]  ? __pfx_kthread+0x10/0x10
      [10839.614106]  ret_from_fork+0x2c/0x50
      [10839.614464]  
      </TASK>
      

      Attachments

        Activity

          People

            bobijam Zhenyu Xu
            bobijam Zhenyu Xu
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: