lustre/obdclass/cl_page.c
@@ -129,9 +129,9 @@ cl_page_slice_get(const struct cl_page *cl_page, int index)
 
 static void __cl_page_free(struct cl_page *cl_page, unsigned short bufsize)
 {
-	int index = cl_page->cp_kmem_index;
+	if (cl_page->cp_in_kmem_array) {
+		int index = cl_page->cp_kmem_index;
 
-	if (index >= 0) {
 		LASSERT(index < ARRAY_SIZE(cl_page_kmem_array));
 		LASSERT(cl_page_kmem_size_array[index] == bufsize);
 		OBD_SLAB_FREE(cl_page, cl_page_kmem_array[index], bufsize);
@@ -144,7 +144,7 @@ static void cl_page_free(const struct lu_env *env, struct cl_page *cp,
 			 struct folio_batch *fbatch)
 {
 	struct cl_object *obj  = cp->cp_obj;
-	unsigned short bufsize = cl_object_header(obj)->coh_page_bufsize;
+	unsigned short bufsize;
 	struct page *vmpage;
 
 	ENTRY;
@@ -174,6 +174,16 @@ static void cl_page_free(const struct lu_env *env, struct cl_page *cp,
 		cs_pagestate_dec(obj, cp->cp_state);
 	if (cp->cp_type != CPT_TRANSIENT)
 		cl_object_put(env, obj);
+
+	if (cp->cp_in_kmem_array)
+		bufsize = cl_page_kmem_size_array[cp->cp_kmem_index];
+	else
+		bufsize = cp->cp_kmem_size;
+	if (unlikely(bufsize != cl_object_header(obj)->coh_page_bufsize))
+		CWARN("%s:"DFID" page bufsize %d, object bufsize now %d\n",
+		      obj->co_lu.lo_dev->ld_obd->obd_name,
+		      PFID(&cl_object_header(obj)->coh_lu.loh_fid),
+		      bufsize, cl_object_header(obj)->coh_page_bufsize);
 	__cl_page_free(cp, bufsize);
 	EXIT;
 }
@@ -195,8 +205,10 @@ check:
 		if (smp_load_acquire(&cl_page_kmem_size_array[i]) == bufsize) {
 			OBD_SLAB_ALLOC_GFP(cl_page, cl_page_kmem_array[i],
 					   bufsize, GFP_NOFS);
-			if (cl_page)
+			if (cl_page) {
+				cl_page->cp_in_kmem_array = 1;
 				cl_page->cp_kmem_index = i;
+			}
 			return cl_page;
 		}
 		if (cl_page_kmem_size_array[i] == 0)
@@ -225,8 +237,10 @@ check:
 		goto check;
 	} else {
 		OBD_ALLOC_GFP(cl_page, bufsize, GFP_NOFS);
-		if (cl_page)
-			cl_page->cp_kmem_index = -1;
+		if (cl_page) {
+			cl_page->cp_in_kmem_array = 0;
+			cl_page->cp_kmem_size = bufsize;
+		}
 	}
 
 	return cl_page;
